In the server templates pages under Default domain owner limits, added a section for specifying the features that can be used by the server owner. Previously, these were always automatically determined based on the features initially enabled when the domain was created.
Added additional warning when deleting scripts from ~/public_html.
Website validation now includes a check for PHP wrapper scripts.
Added a Module Config option to make the DNS client configuration check optional.
PHP modules are now automatically installed from CSW packages on Solaris.
Added the --default-features option to create-domain.pl, to avoid the need to specify feature flags manually.
Globally disabled features are no longer shown greyed-out on the virtual server creation and editing forms.
Under Apache 2.2, add NameVirtualHost *:80 instead of just *.
Virtual servers now have separate php.ini files for each PHP version (4 and 5), under ~/etc/php*. This allows different extensions to be loaded for each PHP version, and for different settings to exist.
Changed the layout of the Plugin Modules page to make it easier to see what is selected, and added a checkbox to have plugins available but not active by default.
Logins and passwords for using installed scripts are now recorded.
The Manage Script page now shows more information about an installed scripts, such as the install directory, database and possibly login and password. The list-scripts.pl command also displays the same information.
---- Changes since 3.42 ----
The Change Domain Name page can be used to modify the administrative username and home directory for a virtual server, without changing the domain name.
Updated the phpMyAdmin script installer to version 2.10.2, and Gallery to 2.2.2.
Added an option to the DNS section of server templates for specifying the hostname to use in the primary NS record for new DNS domains, rather than the system's hostname.
Added a script installer for phpScheduleIt.