@@ -1,0 +1,8 @@
+<header>Force virtual servers to be under domain</header>
+
+By default this is set to <b>Allow any domain</b>, which allows the reseller
+to create any domain names he likes. However, you can use it to restrict him
+to creating under a specified parent domain, typically one that he owns.<p>
+
+<footer>
+
