@@ -2446,6 +2446,9 @@ resel_pass=Password for username
 resel_lock=Account is temporarily locked?
 resel_desc=Real name or description
 resel_email=Contact email address
+resel_subdom=Force virtual servers to be under domain
+resel_esubdom=Missing or invalid forced domain
+resel_anydom=Allow any domain
 resel_max_doms=Maximum virtual servers
 resel_max_aliasdoms=Maximum alias servers
 resel_max_realdoms=Maximum non-alias servers
